# mclog

./: .gitignore  ChangeLog  Makefile  Makefile.rules  Makefile.vars.in  NOTES  README.md  TODO  configure  configure.ac  dwm.m4  getvers.sh  latest_release  mkrelease.sh
apps/: Makefile
apps/mclog/: .gitignore  Makefile  mclog.cc
apps/mclogd/: .gitignore  DwmMclogLocalReceiver.cc  DwmMclogLocalReceiver.hh  DwmMclogLoopbackReceiver.cc  DwmMclogLoopbackReceiver.hh  DwmMclogUnixReceiver.cc  DwmMclogUnixReceiver.hh  Makefile  NOTES  mclogd.cc
apps/mclogger/: .gitignore  Makefile  mclogger.cc
classes/: Makefile
classes/include/: .gitignore  DwmMclogConfig.hh  DwmMclogFacility.hh  DwmMclogFileFormat.hh  DwmMclogFileLogger.hh  DwmMclogFilterDriver.hh  DwmMclogFilterScanner.hh  DwmMclogKeyRequestClient.hh  DwmMclogKeyRequestClientAddr.hh  DwmMclogKeyRequestClientState.hh  DwmMclogKeyRequestListener.hh  DwmMclogKeyRequester.hh  DwmMclogKeyRequesterState.hh  DwmMclogLogFile.hh  DwmMclogLogFiles.hh  DwmMclogLogger.hh  DwmMclogLoopbackSender.hh  DwmMclogMessage.hh  DwmMclogMessageFilter.hh  DwmMclogMessageFilterDriver.hh  DwmMclogMessageFilterScanner.hh  DwmMclogMessageHeader.hh  DwmMclogMessageOrigin.hh  DwmMclogMessagePacket.hh  DwmMclogMessageSelector.hh  DwmMclogMessageSink.hh  DwmMclogMulticastKeyCache.hh  DwmMclogMulticastReceiver.hh  DwmMclogMulticastSender.hh  DwmMclogMulticastSource.hh  DwmMclogMulticastSourceKey.hh  DwmMclogMulticastSources.hh  DwmMclogMulticaster.hh  DwmMclogOstreamSink.hh  DwmMclogRollInterval.hh  DwmMclogRollPeriod.hh  DwmMclogSettings.hh.in  DwmMclogSeverity.hh  DwmMclogSyslogSink.hh  DwmMclogTimestamp.hh  (+5 more)
classes/src/: .gitignore  DwmMclogConfigLex.lex  DwmMclogConfigParse.y  DwmMclogFacility.cc  DwmMclogFileLogger.cc  DwmMclogFilterDriver.cc  DwmMclogFilterLex.lex  DwmMclogFilterParse.y  DwmMclogKeyRequestClientState.cc  DwmMclogKeyRequestListener.cc  DwmMclogKeyRequester.cc  DwmMclogKeyRequesterState.cc  DwmMclogLogFile.cc  DwmMclogLogFiles.cc  DwmMclogLogger.cc  DwmMclogLoopbackSender.cc  DwmMclogMessage.cc  DwmMclogMessageFilterDriver.cc  DwmMclogMessageFilterLex.lex  DwmMclogMessageFilterParse.y  DwmMclogMessageHeader.cc  DwmMclogMessageOrigin.cc  DwmMclogMessagePacket.cc  DwmMclogMessageSelector.cc  DwmMclogMulticastKeyCache.cc  DwmMclogMulticastReceiver.cc  DwmMclogMulticastSender.cc  DwmMclogMulticastSource.cc  DwmMclogMulticastSourceKey.cc  DwmMclogMulticastSources.cc  DwmMclogMulticaster.cc  DwmMclogRollInterval.cc  DwmMclogRollPeriod.cc  DwmMclogSeverity.cc  DwmMclogTimestamp.cc  DwmMclogUdp4Endpoint.cc  DwmMclogUdpEndpoint.cc  Makefile
classes/tests/: .gitignore  Makefile  TestConfig.cc  TestFilterDriver.cc  TestFuzzer.cc  TestLogFile.cc  TestLogFiles.cc  TestLogger.cc  TestMessage.cc  TestMessageHeader.cc  TestMessageOrigin.cc  TestTimestamp.cc
docs/man/: .gitignore  Makefile  mclog.1.in  (+6 more)
etc/: Makefile  mclogd.cfg  mclogd.cfg.example
packaging/: .gitignore  Makefile  debcontrol.in  fbsd_manifest.in  mclog.pc.in
(+33 files in other folders)
